--- a/channel_html_sources/channel_384.html
+++ b/channel_html_sources/channel_384.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-12077-j9ob4gm0-v2/imageContent-12077-j9ob4gm0-m2.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">Zee TV</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Kaise Mujhe Tum Mil Gaye</div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
 </div>
 
 <div id="jwplayerDiv"></div>
