--- a/channel_html_sources/channel_69.html
+++ b/channel_html_sources/channel_69.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-294-j5ji8n08-v1/imageContent-294-j5ji8n08-m1.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">NDTV Profit Prime</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => The Mutual Fund Show</div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Big Story</div>
 </div>
 
 <div id="jwplayerDiv"></div>
