--- a/channel_html_sources/channel_5.html
+++ b/channel_html_sources/channel_5.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-15-j5f97j2o-v4/imageContent-15-j5f97j2o-m3.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">News18 Gujarati</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Crime Report</div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => News @ 3</div>
 </div>
 
 <div id="jwplayerDiv"></div>
