--- a/channel_html_sources/channel_465.html
+++ b/channel_html_sources/channel_465.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-47224-k1uh5c4g-v2/imageContent-47224-k1uh5c4g-m2.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">Tata Play Gujarati Cinema</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Library Ek Anokhi Vaarta</div>
 </div>
 
 <div id="jwplayerDiv"></div>
