--- a/channel_html_sources/channel_370.html
+++ b/channel_html_sources/channel_370.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-12030-j9nyctjk-v3/imageContent-12030-j9nyctjk-m5.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">VH1 HD</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Vh1 K-Popp'd / Ani Nation</div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Vh1 Nocturne</div>
 </div>
 
 <div id="jwplayerDiv"></div>
