--- a/channel_html_sources/channel_12.html
+++ b/channel_html_sources/channel_12.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-8968-j7rcix2w-v1/imageContent-8968-j7rcix2w-m1.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">India News Haryana</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Metro News</div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => 22 Jile 22 Khabar</div>
 </div>
 
 <div id="jwplayerDiv"></div>
