--- a/channel_html_sources/channel_500.html
+++ b/channel_html_sources/channel_500.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-55553-kdzetu0o-v3/imageContent-55553-kdzetu0o-m8.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">Filamchi Bhojpuri</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Jai Ho Jagdamba Mai</div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
 </div>
 
 <div id="jwplayerDiv"></div>
