--- a/channel_html_sources/channel_11.html
+++ b/channel_html_sources/channel_11.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/ZACINE_Thumbnail-v3/ZACINE_Thumbnail.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">Zee Anmol Cinema 2</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Commando 2</div>
 </div>
 
 <div id="jwplayerDiv"></div>
