--- a/channel_html_sources/channel_144.html
+++ b/channel_html_sources/channel_144.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-801-j5m7jg34-v2/imageContent-801-j5m7jg34-m2.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">Fakt Marathi</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Sant Gora Kumbhar/Sant Narhari Sonar</div>
 </div>
 
 <div id="jwplayerDiv"></div>
