--- a/channel_html_sources/channel_9.html
+++ b/channel_html_sources/channel_9.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-27-j5fbpbbs-v1/imageContent-27-j5fbpbbs-m1.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">Flowers</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Uppum Mulakum</div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Movie - Crocodile Love Story</div>
 </div>
 
 <div id="jwplayerDiv"></div>
