--- a/channel_html_sources/channel_356.html
+++ b/channel_html_sources/channel_356.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-11981-j9lunvjs-v1/imageContent-11981-j9lunvjs-m1.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">Zee Madhya Pradesh Chattisgarh</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Hamar Bhakha Hamar Raj</div>
 </div>
 
 <div id="jwplayerDiv"></div>
