--- a/channel_html_sources/channel_454.html
+++ b/channel_html_sources/channel_454.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-67672-kwly0m4w-v1/imageContent-67672-kwly0m4w-m1.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">TV9 Bharatvarsh</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Fikr Aap ki</div>
 </div>
 
 <div id="jwplayerDiv"></div>
