--- a/channel_html_sources/channel_211.html
+++ b/channel_html_sources/channel_211.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-11206-j9icarsw-v2/imageContent-11206-j9icarsw-m2.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">Good News Today</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Achchi Khabar Sachchi Khabar</div>
 </div>
 
 <div id="jwplayerDiv"></div>
