--- a/channel_html_sources/channel_417.html
+++ b/channel_html_sources/channel_417.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-18536-jct505dc-v2/imageContent-18536-jct505dc-m2.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">Hindu Dharmam</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Yadadri Abhishekam</div>
 </div>
 
 <div id="jwplayerDiv"></div>
