--- a/channel_html_sources/channel_400.html
+++ b/channel_html_sources/channel_400.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-12189-j9plqlf4-v1/imageContent-12189-j9plqlf4-m1.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">MIRROR NOW</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => 8 AM Metro Morning</div>
 </div>
 
 <div id="jwplayerDiv"></div>
